<resources>
    <string name="app_name">FreeLancing App</string>
    <string name="profiles">Profiles</string>
    <string name="about">About</string>
    <string name="my_account">My account</string>
    <string name="next">Next</string>
    <string name="account_preferences">Account preferences</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="contact_support">Contact support</string>
    <string name="zaher_kolko">Zaher kolko</string>
    <string name="seller_name">seller_name</string>
    <string name="edit_your_email_please">Edit your email please</string>
    <string name="edit_your_password_please">Edit your password please</string>
    <string name="edit_your_phone_number_please">Edit your phone number please</string>
    <string name="edit_your_country_please">Edit your country please</string>
    <string name="edit_your_date_of_birth">Edit your date of birth</string>
    <string name="back">Back</string>
    <string name="create_service_provider_account">Create Service Provider Account</string>
    <string name="create_customer_account">Create Customer Account</string>
    <string name="information">Information</string>
    <string name="rating">Rating</string>
    <string name="edit_your_name_please">Edit your name please</string>
    <string name="user_name_p">Lina</string>
    <string name="user_name_c">Anas_da</string>
    <string name="person_name_p">Lina Al_Rashid</string>
    <string name="person_name_c">Anas Daghestani</string>


</resources>