<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<RelativeLayout
		android:background="@color/white"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ScrollView
			android:id="@+id/r0h5yg2kjsuak"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/d_blue"
			android:fillViewport="true"
			android:paddingTop="17dp"
			android:paddingBottom="-3dp"
			tools:ignore="SpeakableTextPresentCheck">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<ImageView
					android:id="@+id/back_b"
					android:layout_width="wrap_content"
					android:layout_height="33dp"
					android:layout_marginHorizontal="21dp"
					android:scaleType="fitXY"
					android:src="@drawable/arrow_back" />
				<RelativeLayout
					android:id="@+id/chat_b"
					style="@style/orangeButton"
					android:layout_width="80dp"
					android:layout_height="25dp"
					android:layout_marginStart="310dp"
					android:background="@drawable/cr76bffff4c14"
					tools:ignore="TouchTargetSizeCheck">

					<RelativeLayout
						android:layout_width="80dp"
						android:layout_height="25dp"
						android:layout_centerInParent="true">
						<ImageView
							android:id="@+id/chat_img"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:src="@drawable/chat_with_img" />

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="3dp"
							android:layout_marginEnd="5dp"
							android:layout_toEndOf="@+id/chat_img"
							android:maxLines="1"
							android:text="Chat"
							android:textColor="@color/white"
							android:textSize="12sp" />
					</RelativeLayout>

				</RelativeLayout>
				<RelativeLayout
					android:id="@+id/rdyndsji2gv7"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_alignParentBottom="true"
					android:layout_marginTop="25dp"
					android:layout_marginBottom="0dp"
					android:background="@drawable/tl90tr90bffffffff"
					android:clipChildren="false"
					android:clipToPadding="false"
					android:orientation="vertical"
					android:paddingVertical="30dp">

					<RelativeLayout
						android:id="@+id/photo_rl"
						android:layout_width="87dp"
						android:layout_height="89dp"
						android:layout_alignParentTop="true"
						android:background="@drawable/cr20bfffdf3f1"
						android:layout_marginStart="50dp">

						<de.hdodenhof.circleimageview.CircleImageView
							android:id="@+id/photo_iv"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:layout_centerInParent="true"
							android:src="@drawable/michael_2" />

					</RelativeLayout>
					<TextView
						android:id="@+id/fullname_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentTop="true"
						android:layout_toEndOf="@+id/photo_rl"
						android:layout_marginStart="40dp"
						android:layout_marginTop="5dp"
						android:textColor="@color/black"
						android:textSize="22sp"
						android:textStyle="bold"
						android:text="@string/person_name_p"
						/>
					<TextView
						android:id="@+id/username_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/fullname_tv"
						android:layout_toEndOf="@+id/photo_rl"
						android:layout_marginStart="40dp"
						android:layout_marginTop="5dp"
						android:textColor="@color/black"
						android:textSize="14sp"
						android:text="@string/user_name_p"/>

					<ImageView
						android:id="@+id/rating_star"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/username_tv"
						android:layout_toEndOf="@+id/photo_rl"
						android:layout_marginLeft="40dp"
						android:layout_marginTop="10dp"
						android:src="@drawable/small_star"/>

					<TextView
						android:id="@+id/rating_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/username_tv"
						android:layout_toEndOf="@+id/rating_star"
						android:layout_marginStart="5dp"
						android:layout_marginTop="5dp"
						android:text="rating 4"
						android:textSize="12sp"
						android:textColor="@color/black"/>

					<RelativeLayout
						android:id="@+id/r2r61f10oe76"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_below="@+id/photo_rl"
						android:layout_marginTop="30dp"
						>

						<Button
							android:id="@+id/about_b"
							style="@style/L_orangeButton"
							android:layout_width="120dp"
							android:layout_height="50dp"
							android:layout_alignParentStart="true"
							android:layout_centerVertical="true"
							android:layout_marginStart="5dp"
							android:background="@drawable/cr76bfff8b29c"
							android:text="@string/about"
							android:textAllCaps="false"
							android:textColor="@color/black"
							android:textSize="14sp" />

						<Button
							android:id="@+id/information_b"
							style="@style/orangeButton"
							android:layout_width="120dp"
							android:layout_height="50dp"
							android:layout_centerVertical="true"
							android:layout_toEndOf="@+id/about_b"
							android:layout_marginStart="10dp"
							android:background="@drawable/cr76bffff4c14"
							android:text="@string/information"
							android:maxLines="1"
							android:textAllCaps="false"
							android:textColor="#000000"
							android:textSize="14sp"
							/>
						<Button
							android:id="@+id/Rating_b"
							style="@style/L_orangeButton"
							android:layout_width="120dp"
							android:layout_height="50dp"
							android:layout_centerVertical="true"
							android:layout_toEndOf="@+id/information_b"
							android:layout_marginStart="10dp"
							android:layout_marginEnd="5dp"
							android:background="@drawable/cr76bfff8b29c"
							android:text="@string/rating"
							android:textAllCaps="false"
							android:textColor="#000000"
							android:textSize="14sp"
							/>
					</RelativeLayout>

					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="40dp"
						android:layout_marginEnd="40dp"
						android:layout_marginStart="30dp"
						android:layout_below="@+id/r2r61f10oe76"
						android:background="@drawable/item_list_background">
						<TextView
							android:id="@+id/information"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="10dp"
							android:layout_marginTop="10dp"
							android:text="Information"
							android:textSize="14sp"
							android:textStyle="bold"
							/>
						<TextView
							android:id="@+id/bio_tv"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="10dp"
							android:layout_marginTop="15dp"
							android:layout_marginBottom="15dp"
							android:layout_marginEnd="10dp"
							android:layout_below="@+id/information"
							android:text="I am an IT engineer who studied at Al-Baath University\n, a participant in the ACPC competition, and i have\n many experiences in designing mobile application."
							/>

					</RelativeLayout>

				</RelativeLayout>
				<RelativeLayout
					android:id="@+id/ahjbfhad"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:background="@drawable/bar">

					<ImageButton
						android:id="@+id/account_ib"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginStart="50dp"
						android:background="@null"
						android:src="@drawable/account_page_icon"
						tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
					<ImageButton
						android:id="@+id/chat_ib"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_marginEnd="55dp"
						android:background="@null"
						android:layout_centerVertical="true"
						android:src="@drawable/chats_page_icon"
						tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
				</RelativeLayout>

				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_above="@+id/ahjbfhad"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="50dp"
					android:layout_marginBottom="10dp"
					android:background="@drawable/ellipse_bar_white">

					<RelativeLayout
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_centerInParent="true"
						android:background="@drawable/bar_circle">

						<ImageButton
							android:id="@+id/home_ib"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerInParent="true"
							android:background="@null"
							android:src="@drawable/home_page_icon"
							tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
					</RelativeLayout>
				</RelativeLayout>
			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>