<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/r0h5yg2kjsuak"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/d_blue"
            android:fillViewport="true"
            android:paddingTop="17dp"
            android:paddingBottom="-3dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:id="@+id/rtif6nzhmkxf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="-5dp"
                    android:text="@string/my_account"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:translationX="-3dp"
                    android:translationY="-3dp"/>

                <ImageButton
                    android:id="@+id/r9vqib29tvru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:src="@drawable/list"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/r9vqib2ssd9tvru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="-3dp"
                    android:layout_marginEnd="40dp"
                    android:background="@null"
                    android:src="@drawable/add_profile"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

                <RelativeLayout
                    android:id="@+id/rdyndsji2gv7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/tl90tr90bffffffff"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:paddingVertical="30dp">

                    <RelativeLayout
                        android:id="@+id/sdlskcfjscs"
                        android:layout_width="87dp"
                        android:layout_height="89dp"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/cr20bfffdf3f1"
                        android:layout_marginStart="50dp">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/account_img"/>

                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/sdlskcfjscs"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="25dp"
                        android:textColor="#000000"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:text="@string/zaher_kolko"

                        />
                    <RelativeLayout
                        android:id="@+id/r2r61f10oe76"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sdlskcfjscs"
                        android:layout_marginTop="40dp">
                        <Button
                            android:layout_width="188dp"
                            android:layout_height="56dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="5dp"
                            android:layout_centerVertical="true"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/profiles"
                            android:textSize="16sp"
                            android:background="@drawable/cr76bffff4c14"
                            style="@style/orangeButton"
                            android:textAllCaps="false"
                            />
                        <Button
                            android:id="@+id/about_b"
                            android:layout_width="188dp"
                            android:layout_height="56dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="220dp"
                            android:layout_centerVertical="true"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/about"
                            android:textSize="16sp"
                            android:background="@drawable/cr76bfff9b39d"
                            style="@style/L_orangeButton"
                            android:textAllCaps="false"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/r2r61f10oe76"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/item_list_background"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        >
                        <RelativeLayout
                            android:id="@+id/sahdhsaui"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/ffe530"
                            android:layout_marginStart="20dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/account_img_small"
                                android:layout_centerInParent="true"/>

                        </RelativeLayout>
                        <TextView
                            android:id="@+id/r02uy756a9149"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toEndOf="@+id/sahdhsaui"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="8dp"
                            android:textColor="#000000"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@string/zaher_kolko"
                            />
                        <TextView
                            android:id="@+id/r23sb4nerk44"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toEndOf="@+id/sahdhsaui"
                            android:layout_below="@+id/r02uy756a9149"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#000000"
                            android:textSize="10sp"
                            android:text="It engineer"
                            />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="30dp"
                            android:background="@null"
                            android:src="@drawable/timer"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
                    </RelativeLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/ahjbfhad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bar">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:src="@drawable/home_page_icon"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="55dp"
                        android:background="@null"
                        android:layout_centerVertical="true"
                        android:src="@drawable/chats_page_icon"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ellipse_bar_white"
                    android:layout_above="@+id/ahjbfhad"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="50dp"
                    >

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bar_circle">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@null"
                            android:src="@drawable/account_page_icon"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>